--- a/Homepage.html
+++ b/Homepage.html
@@ -124,6 +124,7 @@
     </div>
 
     <footer> Yoga is only the way to Relax your mind & body</footer>
+    <P> Yoga is the one of the ancient way follwed by the ancestors to keep your mind relax and calm</P>
 </body>
 
 </html>
