--- a/Homepage.html
+++ b/Homepage.html
@@ -123,9 +123,10 @@
 
     </div>
 
-    
+    <Div class="End"> 
     <P> Yoga is the one of the ancient way follwed by the ancestors to keep your mind relax and calm</P>
     <footer> Yoga is only the way to Relax your mind & body</footer>
+    </Div>
     
 </body>
 
