--- a/Homepage.html
+++ b/Homepage.html
@@ -127,6 +127,12 @@
     <P> Yoga is the one of the ancient way follwed by the ancestors to keep your mind relax and calm</P>
     <footer> Yoga is only the way to Relax your mind & body</footer>
     </Div>
+    <br>
+    <ul>
+        <tr>Meditation</tr>
+        <br>
+        <tr>Mind Relaxation</tr>
+    </ul>
     
 </body>
 
