--- a/Homepage.html
+++ b/Homepage.html
@@ -124,15 +124,17 @@
     </div>
 
     <Div class="End"> 
-    <P> Yoga is the one of the ancient way follwed by the ancestors to keep your mind relax and calm</P>
+    <P> Yoga is the one of the ancient way followed by the ancestors to keep your mind relax and calm</P>
     <footer> Yoga is only the way to Relax your mind & body</footer>
     </Div>
     <br>
     <ul>
+        <div Class="Content">
         <tr>Meditation</tr>
         <br>
         <tr>Mind Relaxation</tr>
     </ul>
+</div>
     
 </body>
 
