--- a/Homepage.html
+++ b/Homepage.html
@@ -133,6 +133,9 @@
         <tr>Meditation</tr>
         <br>
         <tr>Mind Relaxation</tr>
+        <ol>
+            <tr>Peace & Mindfullness</tr>
+        </ol>
     </ul>
 </div>
     
